--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -12,6 +12,7 @@ header{
     align-items: center;
     justify-content: space-between;
     margin-left: 10px;
+    height: 100%;
 }
 .left .title h1{
     font-weight: bold;
@@ -28,7 +29,7 @@ header{
 .left .menu .list li a{
     color: black;
     text-decoration: none;
-    margin: 20px;
+    margin: 0 20px 0 20px;
 }
 .right .list{
     display: flex;
@@ -49,4 +50,37 @@ header{
 }
 .right .list .registration a{
     color: black;
+}
+.menu-droper{
+    display: none;
+}
+@media (max-width:1045px){
+    .left .menu .list li a{
+        margin: 10px;
+    }
+    .right .list {
+        margin-right: 0;
+    }
+}
+@media (max-width:845px){
+    .left .menu{
+        padding: 0;
+    }
+    .left{
+        margin-left: 0;
+    }
+}
+@media (max-width:733px){
+    .left .menu{
+        display: none;
+    }
+    .right{
+        display: none;
+    }
+    .menu-droper{
+        display: block;
+    }
+    .menu-droper .list{
+        display: none;
+    }
 }
