upgrade component button

--- a/src/components/button/index.css
+++ b/src/components/button/index.css
@@ -8,3 +8,13 @@
     margin-top: 20px;
     padding: 10px 0 10px 0;
 }
+.order-now{
+    background-color: #FFFCE6;
+    border: 0;
+    border-radius:70px;
+    width: 240px;
+    height: 60px;
+    padding: 10px 0 10px 0;
+    border: 1px solid #FFB2AC;
+    color: black;
+}
