--- a/src/components/cardsCarrosel/index.css
+++ b/src/components/cardsCarrosel/index.css
@@ -1,19 +1,20 @@
+.popular{
+    color: #294BD1;
+    margin: 0;
+    background-color: #fffce6;
+    margin-left: 140px;
+}
 .itens-wrapper {
   width: 100%;
   height: 100%;
-  background-color: #fffce6;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
 }
-img{
-    width: 100%;
-    height: 100%;
 
-    object-fit:cover;
-}
 .itens{
+    align-items: center;
     width: 100%;
     height: 100%;
     display: flex;
@@ -42,16 +43,15 @@ img{
     align-items: center;
     position: absolute;
 }
-.seta{
-    width: 40px;
-    height: 40px;
-    background-color: red;
+.setas{
+    width: 100%;
+    fill: rgba(0, 0, 0, 1);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
-.seta2{
-    width: 40px;
-    height: 40px;
-    background-color: blue;
-}
+
 .container{
     width: 100%;
     height: 100vh;
@@ -63,8 +63,8 @@ img{
     position: absolute;
 }
 .window{
-    width: 900px;
-    height: 490px;
+    width: 1200px;
+    height: 500px;
     background-color: white;
     align-items: center;
     display: flex;
@@ -75,7 +75,14 @@ img{
 .buraco{
     width: 100%;
     height: 100%;
-    background-color: red;
+    position: absolute;
+    z-index: -1;
+    background-color: #fffce6;
+}
+.container .range{
+    width: 100%;
+    height: 80px;
+    background-color: #FD4F4F;
     position: absolute;
     z-index: -1;
 }
