--- a/src/components/cardsCarrosel/index.css
+++ b/src/components/cardsCarrosel/index.css
@@ -43,15 +43,6 @@
     align-items: center;
     position: absolute;
 }
-.setas{
-    width: 100%;
-    fill: rgba(0, 0, 0, 1);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
 .container{
     width: 100%;
     height: 100vh;
@@ -59,8 +50,8 @@
     align-items: center;
     display: flex;
     justify-content: space-around;
-    z-index: -1;
-    position: absolute;
+    z-index: 1;
+    position: relative;
 }
 .window{
     width: 1200px;
@@ -70,13 +61,13 @@
     display: flex;
     justify-content: center;
     position: relative;
-    z-index: -1;
+    z-index: 3;
 }
 .buraco{
     width: 100%;
     height: 100%;
-    position: absolute;
-    z-index: -1;
+    position: relative;
+    z-index: 2;
     background-color: #fffce6;
 }
 .container .range{
