--- a/src/components/delivery/index.css
+++ b/src/components/delivery/index.css
@@ -1,9 +1,20 @@
+.container-img{
+    margin: 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background-color: #FFFCE6;
+}
 .container-delivery{
     width: 100%;
     background-color: #FFFCE6;
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    flex-direction: column;
     justify-content: center;
+}
+.container-delivery .container-img .buttons{
+    margin-top: 100px;
 }
 .deliveryman{
     width: 400px;
@@ -15,4 +26,30 @@
 }
 .cards{
     background-color: #8590BC;
+}
+.container-buttons{
+    width: 80%;
+    height: 170px;
+    margin-bottom: 200px;
+    background-color: #FFFCE6;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.container-buttons .button-card{
+    width: 250px;
+    height: 180px;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.container-buttons .button-card h3{
+    margin: 30px 0 0 0;
+}
+.container-buttons .button-card img{
+    width: 120px;
+    height: 100px;
 }
